--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: app_dev
+    container_name: profarma_dev_app
     ports:
       - '${PORT:-3333}:3333'
     volumes:
@@ -22,13 +22,13 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: postgres_dev
+    container_name: profarma_db_dev
     ports:
       - '5432:5432'
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=dev_db
+      - POSTGRES_DB=profarma_dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
