--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: app_prod
+    container_name: profarma_prod_app
     ports:
       - '${PORT:-3000}:3000'
     env_file:
@@ -20,7 +20,7 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: postgres_prod
+    container_name: profarma_db_prod
     ports:
       - '5432:5432'
     environment:
