chore: remove unnused code

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,13 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: profarma_dev_app
+    container_name: formalization_app
     ports:
-      - '${PORT:-3333}:3333'
+      - "${PORT:-3333}:3333"
     volumes:
       - .:/home/node
       - /home/node/node_modules
@@ -22,17 +22,17 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: profarma_db_dev
+    container_name: formalization_db
     ports:
-      - '5432:5432'
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=profarma_dev
+      - POSTGRES_DB=formalization_dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
