--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main.js",
     "start:test": "cross-env NODE_ENV=test node dist/main.js",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,8 +26,6 @@
     "docker:dev:app": "docker-compose -f docker-compose.dev.yml up app",
     "docker:dev": "npm run docker:dev:infra && sleep 10 && npm run docker:dev:migrate && npm run docker:dev:seed && npm run docker:dev:app",
     "docker:dev:build": "docker-compose -f docker-compose.dev.yml up --build",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up",
-    "docker:prod:build": "docker-compose -f docker-compose.prod.yml up --build",
     "docker:dev:down": "docker-compose -f docker-compose.dev.yml down",
     "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
     "start:docker:dev": "cross-env NODE_ENV=development npx prisma migrate deploy && npx prisma generate && npm run start:dev",
@@ -51,6 +48,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
